<resources>
    <string name="app_name">Переводчик</string>
    <string name="hint_translation_edit_text">Введите текст</string>
    <string name="wrong_key">Ключ Яндекс.Переводчика перестал действовать. Обратитесь к разработчику.</string>
    <string name="limit_expired">Вы используете пробную версию Яндекс.Переводчика. Количество переводов на сегодня исчерпано.</string>
    <string name="text_limit_expired">Введен слишком большой текст. Попробуйте перевести по частям.</string>
    <string name="wrong_text">Введенный текст не подлежит переводу.</string>
    <string name="wrong_langs">Данное направление перевода не поддерживается.</string>
    <string name="unknown">На сервере произошла неизвестная ошибка.</string>
    <string name="no_internet_label">Отсутствует интернет-соединение</string>
    <string name="no_internet_message">Ожидание подключения...</string>
    <string name="hint_search_all_history">Найти в истории</string>
    <string name="hint_search_favorite_history">Найти в избранном</string>
    <string name="no_content_history_message">В истории пока ничего нет</string>
    <string name="no_content_favorites_message">В избранном пока ничего нет</string>
    <string name="no_content_search_message">Ничего не найдено</string>
    <string name="search_image_description">Поиск</string>
    <string name="text_copied">Перевод скопирован</string>
    <string name="delete_denied">Удаление невозможно. Повторите попытку еще раз.</string>
    <string name="delete_translations_source_is_empty_all_history">В истории остались только
        избранные записи. Вы можете очистить избранное.</string>
    <string name="original_language_label">Язык текста</string>
    <string name="translated_language_label">Язык перевода</string>
    <string name="content_description_back">Назад</string>
    <string name="toolbar_info_text">О приложении</string>
    <string name="history">История</string>
    <string name="delete_all_history_confirmation_message">Вы уверены, что хотите очистить историю?</string>
    <string name="delete_only_favorite_history_confirmation_message">Вы уверены, что хотите очистить избранное?</string>
    <string name="confirmation_cancel">Отмена</string>
    <string name="confirmation_confirm">Да</string>
    <string name="delete">удалить</string>
    <string name="disclaimer_text">Переведено сервисом Яндекс.Переводчик</string>
    <string name="disclaimer_service_link">http://translate.yandex.ru/</string>
    <string name="disclaimer_full_info">Приложение использует сервис Яндекс.Переводчик
        для перевода текста, содержит список поддерживаемых сервисом языков,
        а также сохраняет переведунную с помощью сервиса информацию на устройство.
        Монетизация и выкладывание программы в свободный доступ не предусмотрены ни в каком виде.
        Условия использования сервиса Яндекс.Переводчик размещены по адресу: </string>
    <string name="disclaimer_rules_link">https://yandex.ru/legal/translate_termsofuse/</string>
    <string name="disclaimer_full_info_sub">Сервис Яндекс.Переводчик размещен по адресу: </string>

    <string-array name="view_pager_labels">
        <item>История</item>
        <item>Избранное</item>
    </string-array>

    <string-array name="supported_languages_texts">
        <item>Африкаанс</item>
        <item>Амхарский</item>
        <item>Арабский</item>
        <item>Азербайджанский</item>
        <item>Башкирский</item>
        <item>Белорусский</item>
        <item>Болгарский</item>
        <item>Бенгальский</item>
        <item>Боснийский</item>
        <item>Каталанский</item>
        <item>Себуанский</item>
        <item>Чешский</item>
        <item>Валлийский</item>
        <item>Датский</item>
        <item>Немецкий</item>
        <item>Греческий</item>
        <item>Английский</item>
        <item>Эсперанто</item>
        <item>Испанский</item>
        <item>Эстонский</item>
        <item>Баскский</item>
        <item>Персидский</item>
        <item>Финский</item>
        <item>Французский</item>
        <item>Ирландский</item>
        <item>Шотландский(гэльский)</item>
        <item>Галисийский</item>
        <item>Гуджарати</item>
        <item>Иврит</item>
        <item>Хинди</item>
        <item>Хорватский</item>
        <item>Гаитянский</item>
        <item>Венгерский</item>
        <item>Армянский</item>
        <item>Индонезийский</item>
        <item>Исландский</item>
        <item>Итальянский</item>
        <item>Японский</item>
        <item>Яванский</item>
        <item>Грузинский</item>
        <item>Казахский</item>
        <item>Кхмерский</item>
        <item>Каннада</item>
        <item>Корейский</item>
        <item>Киргизский</item>
        <item>Латынь</item>
        <item>Люксембургский</item>
        <item>Лаосский</item>
        <item>Литовский</item>
        <item>Латышский</item>
        <item>Малагасийский</item>
        <item>Марийский</item>
        <item>Маори</item>
        <item>Македонский</item>
        <item>Малаялам</item>
        <item>Монгольский</item>
        <item>Маратхи</item>
        <item>Горномарийский</item>
        <item>Малайский</item>
        <item>Мальтийский</item>
        <item>Бирманский</item>
        <item>Непальский</item>
        <item>Голландский</item>
        <item>Норвежский</item>
        <item>Панджаби</item>
        <item>Папьяменто</item>
        <item>Польский</item>
        <item>Португальский</item>
        <item>Румынский</item>
        <item>Русский</item>
        <item>Сингальский</item>
        <item>Словацкий</item>
        <item>Словенский</item>
        <item>Албанский</item>
        <item>Сербский</item>
        <item>Сунданский</item>
        <item>Шведский</item>
        <item>Суахили</item>
        <item>Тамильский</item>
        <item>Телугу</item>
        <item>Таджикский</item>
        <item>Тайский</item>
        <item>Тагальский</item>
        <item>Турецкий</item>
        <item>Татарский</item>
        <item>Удмуртский</item>
        <item>Украинский</item>
        <item>Урду</item>
        <item>Узбекский</item>
        <item>Вьетнамский</item>
        <item>Коса</item>
        <item>Идиш</item>
        <item>Китайский</item>
    </string-array>


</resources>
